chapter-10-nginx-k8s-ingress/k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: nginx-bootcamp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: your-dockerhub-user/api:latest
        ports:
        - containerPort: 3000
