chapter-10-nginx-k8s-ingress/k8s/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: nginx-bootcamp
spec:
  selector:
    app: api
  ports:
    - port: 3000
      targetPort: 3000
