chapter-10-nginx-k8s-ingress/k8s/static-service.yml
apiVersion: v1
kind: Service
metadata:
  name: static-service
  namespace: nginx-bootcamp
spec:
  selector:
    app: static
  ports:
    - port: 80
      targetPort: 80
