chapter-10-nginx-k8s-ingress/k8s/ws-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ws-service
  namespace: nginx-bootcamp
spec:
  selector:
    app: ws
  ports:
    - port: 3000
      targetPort: 3000
